Fixed issue with collapsing like/dislike count

--- a/client/src/components/MovieDetails/MovieDetails.scss
+++ b/client/src/components/MovieDetails/MovieDetails.scss
@@ -64,6 +64,9 @@
     button {
       font-size: 0.5rem;
     }
+    .counter-likes-dislikes {
+      min-height: 0.75rem;
+    }
     .btn-like,
     .btn-dislike {
       padding: 0.1875rem 0.375rem !important;
@@ -99,6 +102,9 @@
     p,
     button {
       font-size: 1rem;
+    }
+    .counter-likes-dislikes {
+      min-height: 1.5rem;
     }
     .btn-like,
     .btn-dislike {
